--- a/Presentation/WebApp/Views/Shared/Error.cshtml
+++ b/Presentation/WebApp/Views/Shared/Error.cshtml
@@ -1,25 +1,48 @@
 ﻿@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+<div class="row">
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+    <div class="col-md-12">
+        <div class="text-center">
+            <h1 class="display-1" style=" color: #e21212; font-size:larger;font-size: 165px;">
+                <i class="fas fa-grimace"></i>
+            </h1>
+
+            <h1 class="display-3">
+                Oops!
+            </h1>
+            <div class="pt-2 " style="font-size: 20px;">
+                An error occurred while processing your request.
+            </div>
+
+            <div class="pt-2" style="font-size: 12px !important; font-weight:bold ">
+                <p style="font-weight:normal"> Occured At </p>  @DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss.fff")
+            </div>
+
+            @if (Model.ShowRequestId)
+            {
+                <div class="pt-4" style="font-size: 12px !important; font-weight:bold ">
+                    <p style="font-weight:normal"> Request ID </p>  @Model.RequestId
+                </div>
+            }
+
+            <div class="error-actions pt-4">
+                <a href="\Home" class="btn btn-primary btn-lg" onclick="JsMain.ShowLoaddingIndicator()">
+                    <i class="fas fa-home"></i>
+                    Take Me Home
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    $(document).ready(function () {
+        $('#loadingIconModal').modal('hide');
+    });
+</script>
