added windows authentication

--- a/Presentation/WebApp/Views/Home/Index.cshtml
+++ b/Presentation/WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using System.Security.Claims;
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,3 +8,22 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
+
+@if (!User.Identities.Any(u => u.IsAuthenticated))
+{
+    <h1>Hello World</h1>
+}
+else
+{
+   
+
+    <h1>
+        Hello @User.Identities.First(
+u => u.IsAuthenticated &&
+u.HasClaim(c => c.Type == ClaimTypes.Name)).FindFirst(ClaimTypes.Name).Value
+    </h1>
+}
+
+
