--- a/Presentation/WebApp/Views/Shared/AccessDenied.cshtml
+++ b/Presentation/WebApp/Views/Shared/AccessDenied.cshtml
@@ -12,15 +12,15 @@
                 <i class="fas fa-exclamation-triangle"></i>
             </h1>
 
-            <h1 class="display-4">
+            <h1 class="display-4 pt-3">
                 Access Denied!
             </h1>
-            <div class="error-details pt-3" style="font-size: 16px;">
+            <div class="error-details pt-4" style="font-size: 16px;">
                 Access to the requested page has been denied due to in-sufficient access.
             </div>
 
 
-            <div class="error-actions pt-4">
+            <div class="error-actions pt-5">
                 <a href="\Home" class="btn btn-primary btn-lg" onclick="JsMain.ShowLoaddingIndicator()">
                     <i class="fas fa-home"></i>
                     Take Me Home
