--- a/Presentation/WebApp/Areas/Admin/Views/Admin/_EditUser.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/_EditUser.cshtml
@@ -19,13 +19,7 @@
             <label asp-for="UserId"></label>
 
             @Html.HiddenFor(x => x.ConnectionId, new { @id = "txtHdnConnectionId" })
-
-            @*<input type="hidden" id="txtHdnConnectionId" name="txtHdnConnectionId"
-                asp-for="ConnectionId" />*@
-            @*<input disabled="disabled" type="text" asp-for="ConnectionId"
-                class="form-control" id="txtHdnConnectionId"
-                placeholder="Enter User Id">*@
-
+            @Html.HiddenFor(x => x.UserId, new { @id = "hdnUserId" })
             <input disabled="disabled" type="text" asp-for="UserId"
                    class="form-control" id="txtUserId"
                    placeholder="Enter User Id">
@@ -72,54 +66,52 @@
 </div>
 
 <script>
+
     $('#modalLoadingIcon').modal('hide');
+
+    modalLoadingIcon
     setTimeout(
         function () {
             $('#txtHdnConnectionId').val($('#signalRconnectionId').val());
-        }, 300);
+        }, 1000);
 
-     var getAddUserRolesPartialViewUrl = '@Url.Action("GetAddUserRolesPartialView", "Admin", new { Area = "Admin" })';
-
-
-    function addUserOnBegin() {
+    function editUserOnBegin() {
         $('#modalProgressBar').modal('show');
     };
 
+    function editUserOnComplete(xhr) {
 
-    function addUserOnComplete(xhr) {
+        $('#modalEditUser').modal('hide');
         setTimeout(
             function () {
                 $('#modalProgressBar').modal('hide');
             }, 500);
     };
 
-    function addUserOnSuccess(data, status, xhr) {
+    function editUserOnSuccess(data, status, xhr) {
        
         if (jQuery.type(data.Status) === "undefined") {
 
         }
         else {
             $('#modalAddUser').modal('hide');
-
-            swalWithBootstrapButtons.fire({
-                title: data.GetGoodJobVerb,
-                text: data.Message,
-                type: 'success',
-                showCancelButton: false,
-                confirmButtonText: '<i class="fas fa-check"></i> Ok'
-            });
-
-            $('#loadAddUserRolePartialView').load(getAddUserRolesPartialViewUrl + '?userId=' + data.UserId);
+            Swal.fire(
+                data.GetGoodJobVerb,
+                data.Message,
+                'success'
+            );
         }
     };
-    function addUserOnFailure(XMLHttpRequest, textStatus, errorThrown) {
+    function editUserOnFailure() {
+
+        $('#modalEditUser').modal('hide');
+
         swalWithBootstrapButtons.fire({
             title: 'Oops...',
             text: "An error occurred while processing your request",
             type: 'error',
             showCancelButton: false,
-            confirmButtonText: '<i class="fas fa-check"></i> Ok',
-            footer: XMLHttpRequest.status + " " + errorThrown
+            confirmButtonText: '<i class="fas fa-check"></i> Ok'
         });
 
         setTimeout(
