UI chnages and Responce config for error message

--- a/Presentation/WebApp/Areas/Admin/Views/Admin/_AddUser.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/_AddUser.cshtml
@@ -97,7 +97,9 @@
 
 
 <script>
-   
+
+    new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
+
     $('#modalAddUser').modal('show');
 
     setTimeout(
