--- a/Presentation/WebApp/Views/Home/Index.cshtml
+++ b/Presentation/WebApp/Views/Home/Index.cshtml
@@ -44,3 +44,6 @@ u.HasClaim(c => c.Type == ClaimTypes.Name)).FindFirst(ClaimTypes.Name).Value
 }
 
 
+<script>
+    $('#navbarHome').addClass('active');
+</script>
