--- a/Presentation/WebApp/Areas/Admin/Views/Admin/Index.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/Index.cshtml
@@ -17,41 +17,10 @@
                 </button>
             </div>
         </div>
-        
+
     </div>
     <div class="card-body">
-
-        @(Html
-                        .Grid(Model)
-                        .Build(columns =>
-                        {
-
-                            columns.Add(model => model.UserId).Titled("User Id");
-                            columns.Add(model => model.UserName).Titled("User Name");
-                            columns.Add(model => model.FirstName).Titled("First Name");
-                            columns.Add(model => model.LastName).Titled("Last Name");
-                            columns.Add(model => model.MiddleName).Titled("Middle Name");
-                            columns.Add(model => model.CreatedOn).Titled("Created On");
-                            columns.Add(model => model.CreatedBy).Titled("Created By");
-                            columns.Add(model =>
-                              $"<button class='btn btn-secondary btn-sm' id=\"{model.UserId}\" " +
-                              $"onclick='GetEditUserPartialView(\"{@Url.Action("GetEditUserPartialView", "Admin", new { Area = "Admin", userID = model.UserId })}\")'>" +
-                              $"<i class='fas fa-user-edit'></i> Edit</button>"
-
-                              +
-                              $"<button class='btn btn-danger ml-2 btn-sm' id=\"{model.UserId}\"" +
-                              $"onclick='GetDeleteUserPartialView(" +
-                              $"\"{@Url.Action("GetDeleteUserPartialView", "Admin", new { Area = "Admin", userID = model.UserId})}\")'>" +
-
-                              $"<i class='fas fa-user-times'></i>Delete</button>"
-                          ).Encoded(false).Titled("Manage").AppendCss("userManagementGridWidth"); ;
-
-                        })
-                        .Empty("No data found")
-                        //.Filterable()
-                        //.Sortable()
-                        .Pageable()
-        )
+        @Html.AjaxGrid(Url.Action("GetUsers"), new { id = "gridGetsUsersAjax" })
     </div>
 </div>
 
@@ -70,7 +39,7 @@
                   data-ajax-success="addUserOnSuccess" data-ajax-failure="addUserOnFailure"
                   data-ajax-mode="replace"
                   data-ajax-update="#ajaxresult">
-                <div class="modal-body" id="ajaxresult">                    
+                <div class="modal-body" id="ajaxresult">
 
                 </div>
                 <div class="modal-footer">
@@ -163,14 +132,16 @@
 </div>
 
 <script>
-    function GetAddUserPartialView(acionUrl) {        
+    $('#navbarAdminDropdown').addClass('active');
+
+    function GetAddUserPartialView(acionUrl) {
         $('#modalAddUser').modal('show');
         $('#modalLoadingIcon').modal('show');
         $('#ajaxresult').load(acionUrl);
     };
 
-    function GetEditUserPartialView(acionUrl) {       
-        $('#modalEditUser').modal('show');
+    function GetEditUserPartialView(acionUrl) {
+        $('#modalEditUser').modal('show');        
         $('#modalLoadingIcon').modal('show');
         $('#ajaxEditUserResult').load(acionUrl);
     };
