--- a/Presentation/WebApp/Areas/Admin/Views/Admin/_DeleteUser.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/_DeleteUser.cshtml
@@ -27,6 +27,7 @@
         };
 
         function deleteUserOnSuccess(data, status, xhr) {
+            new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
 
             $('#modalDeleteUser').modal('hide');
             $('#deleteUserPartialView').remove();
@@ -35,23 +36,30 @@
 
             }
             else {
-                $('#modalAddUser').modal('hide');
+                $('#modalDeleteUser').modal('hide');
 
-                Swal.fire(
-                    data.GetGoodJobVerb,
-                    data.Message,
-                    'success'
-                );
+                swalWithBootstrapButtons.fire({
+                   
+                    text: data.Message,
+                    type: 'success',
+                    showCancelButton: false,
+                    confirmButtonText: '<i class="fas fa-check"></i> Ok'
+                });
             }
         };
 
-        function deleteUserOnFailure(error) {
+        function deleteUserOnFailure(XMLHttpRequest, textStatus, errorThrown) {
+            new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
+
             swalWithBootstrapButtons.fire({
                 title: 'Oops...',
                 text: "An error occurred while processing your request",
                 type: 'error',
+                html: '<br> <br>  An error occurred while processing your request. <br> <br> <br> ' +
+                    '<div style="text-align: center; font-size : 14px;" >   Error Message: ' + XMLHttpRequest.status + " " + errorThrown +
+                    '<br> <br> ' + ' Request Id : ' + XMLHttpRequest.getResponseHeader('RequestId') + ' </div>',
                 showCancelButton: false,
-                confirmButtonText:'<i class="fas fa-check"></i> Ok'
+                confirmButtonText: '<i class="fas fa-check"></i> Ok'
             });
 
             setTimeout(
@@ -60,5 +68,4 @@
                 }, 500);
         };
     </script>
-
 </div>
