--- a/Presentation/WebApp/Areas/Admin/Views/Admin/_EditUser.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/_EditUser.cshtml
@@ -8,7 +8,6 @@
             <label asp-for="UserName"></label>  <label> *</label>
             <input type="text" asp-for="UserName"
                    class="form-control" id="txtUserName"
-                 
                    placeholder="Enter User Name">
             <span asp-validation-for="UserName" class="text-danger small pl-2"></span>
         </div>
@@ -69,19 +68,16 @@
 
     $('#modalLoadingIcon').modal('hide');
 
-    modalLoadingIcon
     setTimeout(
         function () {
             $('#txtHdnConnectionId').val($('#signalRconnectionId').val());
-        }, 1000);
+        }, 300);
 
     function editUserOnBegin() {
-        $('#modalProgressBar').modal('show');
+        //$('#modalProgressBar').modal('show');
     };
 
     function editUserOnComplete(xhr) {
-
-        $('#modalEditUser').modal('hide');
         setTimeout(
             function () {
                 $('#modalProgressBar').modal('hide');
@@ -89,20 +85,24 @@
     };
 
     function editUserOnSuccess(data, status, xhr) {
-       
+        //new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
+
         if (jQuery.type(data.Status) === "undefined") {
 
         }
         else {
-            $('#modalAddUser').modal('hide');
-            Swal.fire(
-                data.GetGoodJobVerb,
-                data.Message,
-                'success'
-            );
+
+            swalWithBootstrapButtons.fire({
+                title: data.GetGoodJobVerb,
+                text: data.Message,
+                type: 'success',
+                showCancelButton: false,
+                confirmButtonText: '<i class="fas fa-check"></i> Ok'
+            });
         }
     };
-    function editUserOnFailure() {
+    function editUserOnFailure(XMLHttpRequest, textStatus, errorThrown) {
+        new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
 
         $('#modalEditUser').modal('hide');
 
@@ -110,6 +110,9 @@
             title: 'Oops...',
             text: "An error occurred while processing your request",
             type: 'error',
+            html: '<br> <br>  An error occurred while processing your request. <br> <br> <br> ' +
+                '<div style="text-align: center; font-size : 14px;" >   Error Message: ' + XMLHttpRequest.status + " " + errorThrown +
+                '<br> <br> ' + ' Request Id : ' + XMLHttpRequest.getResponseHeader('RequestId') + ' </div>',
             showCancelButton: false,
             confirmButtonText: '<i class="fas fa-check"></i> Ok'
         });
