--- a/Presentation/WebApp/Areas/Admin/Views/Admin/Index.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/Index.cshtml
@@ -57,6 +57,22 @@
     </div>
 </div>
 
+<div class="modal" id="modalAddRolesToUser" data-backdrop="static">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add Roles</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div id="modalBodyAppend">
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal" id="modalEditUser" data-backdrop="static">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -89,7 +105,6 @@
         </div>
     </div>
 </div>
-
 
 <div class="modal" id="modalDeleteUser" data-backdrop="static">
     <div class="modal-dialog modal-lg">
