--- a/Presentation/WebApp/Areas/Admin/Views/Admin/_AddUser.cshtml
+++ b/Presentation/WebApp/Areas/Admin/Views/Admin/_AddUser.cshtml
@@ -1,155 +1,140 @@
 ﻿@model WebApp.Models.UserViewModel
-<!-- Modal -->
-<div class="modal fade" id="modalAddUser" data-backdrop="static">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Add User</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form id="formAddUser" asp-area="Admin" asp-controller="Admin" asp-action="AddUser"
-                  method="post" data-ajax="true"
-                  data-ajax-begin="addUserOnBegin" data-ajax-complete="addUserOnComplete"
-                  data-ajax-success="addUserOnSuccess" data-ajax-failure="addUserOnFailure">
-                <div class="modal-body">
-
-                    <div class="row">
-                        <div class="col-sm">
-                            <div class="form-group">
-
-                                <label asp-for="UserName"></label>
-                                <input type="text" asp-for="UserName"
-                                       class="form-control" id="txtUserName"
-                                       
-                                       placeholder="Enter User Name">
-                                <span asp-validation-for="UserName" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-sm">
-                            <div class="form-group">
-
-                                <label asp-for="UserId"></label>
-
-                                @Html.HiddenFor(x => x.ConnectionId, new { @id = "txtHdnConnectionId" })
-
-                                @*<input type="hidden" id="txtHdnConnectionId" name="txtHdnConnectionId"
-                                    asp-for="ConnectionId" />*@
-                                @*<input disabled="disabled" type="text" asp-for="ConnectionId"
-                                    class="form-control" id="txtHdnConnectionId"
-                                    placeholder="Enter User Id">*@
-
-                                <input disabled="disabled" type="text" asp-for="UserId"
-                                       class="form-control" id="txtUserId"
-                                       placeholder="Enter User Id">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm">
-                            <div class="form-group">
-                                <label asp-for="FirstName"></label>
-                                <input type="text" asp-for="FirstName"
-                                       class="form-control" id="txtFirstName"
-                                       placeholder="Enter First Name">
-                                <span asp-validation-for="FirstName" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="col-sm">
-                            <div class="form-group">
-                                <label for="LastName">Last Name</label>
-                                <input type="text" asp-for="LastName"
-                                       class="form-control" id="txtLastName"
-                                       placeholder="Enter Last Name">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm">
-                            <div class="form-group">
-                                <label for="MiddleName"> Middle Name</label>
-                                <input type="text" asp-for="MiddleName"
-                                       class="form-control" id="txtMiddleName"
-                                       placeholder="Enter Middle Name">
-                            </div>
-                        </div>
-                        <div class="col-sm">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Add</button>
-                    <button type="button" class="btn btn-primary">Cancel</button>
-
-                </div>
-            </form>
 
 
+<div class="row">
+    <div class="col-sm">
+        <div class="form-group">
 
+            <label asp-for="UserName"></label>  <label> *</label>
+            <input type="text" asp-for="UserName"
+                   class="form-control" id="txtUserName"
+                 
+                   placeholder="Enter User Name">
+            <span asp-validation-for="UserName" class="text-danger small pl-2"></span>
+        </div>
+    </div>
+    <div class="col-sm">
+        <div class="form-group">
+
+            <label asp-for="UserId"></label>
+
+            @Html.HiddenFor(x => x.ConnectionId, new { @id = "txtHdnConnectionId" })
+
+            @*<input type="hidden" id="txtHdnConnectionId" name="txtHdnConnectionId"
+                asp-for="ConnectionId" />*@
+            @*<input disabled="disabled" type="text" asp-for="ConnectionId"
+                class="form-control" id="txtHdnConnectionId"
+                placeholder="Enter User Id">*@
+
+            <input disabled="disabled" type="text" asp-for="UserId"
+                   class="form-control" id="txtUserId"
+                   placeholder="Enter User Id">
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm">
+        <div class="form-group">
+            <label asp-for="FirstName"></label>  <label> *</label>
+            <input type="text" asp-for="FirstName"
+                   class="form-control" id="txtFirstName"
+                   placeholder="Enter First Name">
+            <span asp-validation-for="FirstName" class="text-danger small pl-2"></span>
+        </div>
+    </div>
+    <div class="col-sm">
+        <div class="form-group">
+            <label asp-for="LastName">Last Name</label> <label> *</label>
+            <input type="text" asp-for="LastName"
+                   class="form-control" id="txtLastName"
+                   placeholder="Enter Last Name">
+            <span asp-validation-for="LastName" class="text-danger small pl-2"></span>
         </div>
     </div>
 </div>
 
 
+<div class="row">
+    <div class="col-sm">
+
+
+        <div class="form-group">
+            <label for="MiddleName"> Middle Name</label>
+            <input type="text" asp-for="MiddleName"
+                   class="form-control" id="txtMiddleName"
+                   placeholder="Enter Middle Name">
+        </div>
+    </div>
+    <div class="col-sm">
+
+    </div>
+</div>
 
 <script>
-
-    new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
-
-    $('#modalAddUser').modal('show');
-
+    
+    $('#modalLoadingIcon').modal('hide');
     setTimeout(
         function () {
+            $('#txtHdnConnectionId').val($('#signalRconnectionId').val());
+        }, 300);
 
-            $('#modalProgressBar').modal('hide');
+    var getAddRolesToUserPartialViewUrl = '@Url.Action("GetAddRolesToUserPartialView", "Admin", new { Area = "Admin" })';
 
-        }, 500);
-
-
-    $('#txtHdnConnectionId').val($('#signalRconnectionId').val());
-
-    var getAddUserRolesPartialViewUrl = '@Url.Action("GetAddUserRolesPartialView", "Admin", new { Area = "Admin" })';
 
     function addUserOnBegin() {
         $('#modalProgressBar').modal('show');
-
     };
 
-    function addUserOnComplete(xhr) {
 
-        $('#modalProgressBar').modal('hide');
+    function addUserOnComplete(xhr, data) {
+        new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
+        setTimeout(
+            function () {
+                $('#modalProgressBar').modal('hide');
+            }, 500);
+
+     
     };
 
     function addUserOnSuccess(data, status, xhr) {
-
-        $('#modalProgressBar').modal('hide');
-
+       
         if (jQuery.type(data.Status) === "undefined") {
 
-            $('#modalAddUser').modal('hide');
-            $('#modalAddUser').remove();
-
-            $('#loadAddUserPartialView').html(data);
         }
         else {
             $('#modalAddUser').modal('hide');
-            $('#modalAddUser').remove();
-            $('.modal-backdrop').remove();
-            Swal.fire(
-                data.GetGoodJobVerb,
-                data.Message,
-                'success'
-            );
 
-           // $('#loadAddUserPartialView').load(getAddUserRolesPartialViewUrl + '?userId=' + data.UserId);
+            swalWithBootstrapButtons.fire({
+                title: data.GetGoodJobVerb,
+                text: data.Message,
+                type: 'success',
+                showCancelButton: false,
+                confirmButtonText: '<i class="fas fa-check"></i> Ok'
+            });
+
         }
+
+        $('#modalBodyAppend').load(getAddRolesToUserPartialViewUrl + '?userId=' + data.UserId);
+
     };
-    function addUserOnFailure() {
+    function addUserOnFailure(XMLHttpRequest, textStatus, errorThrown) {
+        new MvcGrid(document.querySelector('#gridGetsUsersAjax')).reload();
 
+        swalWithBootstrapButtons.fire({
+            title: 'Oops...',
+            text: "An error occurred while processing your request",
+            type: 'error',
+            html: '<br> <br>  An error occurred while processing your request. <br> <br> <br> ' +
+                '<div style="text-align: center; font-size : 14px;" >   Error Message: ' + XMLHttpRequest.status + " " + errorThrown +
+                '<br> <br> ' + ' Request Id : ' + XMLHttpRequest.getResponseHeader('RequestId') + ' </div>',
+            showCancelButton: false,
+            confirmButtonText: '<i class="fas fa-check"></i> Ok'
+        });
 
+        setTimeout(
+            function () {
+                $('#modalProgressBar').modal('hide');
+            }, 500);
     };
 </script>
